# serializer version: 1
# name: test_mask_slices[sample1, no slices/min/max]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]]
  '''
# ---
# name: test_mask_slices[sample2, no slices/min/max]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]]
  '''
# ---
# name: test_mask_slices[simple array, no slices/min/max]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 1]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_segment_slices[sample1 segment with label]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]]
  '''
# ---
# name: test_segment_slices[sample2 segment with label]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]]
  '''
# ---
# name: test_segment_slices[simple height array (2 layers)]
  '''
  [[[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]]
  '''
# ---
# name: test_segment_slices[simple height array (5 layers)]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 1]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_segment_slices[simple three layers with three segments using label]
  '''
  [[[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [0 0 0]
    [0 0 0]
    [3 3 3]
    [0 0 0]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]]
  '''
# ---
# name: test_segment_slices[simple three layers with three segments using watershed]
  '''
  [[[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [4 4 4]
    [4 4 4]
    [4 4 4]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]]
  '''
# ---
# name: test_slicer[simple1]
  '''
  [[[-5.49539672e+04 -5.49539672e+04 -5.49539672e+04 -5.49539672e+04
     -5.49539672e+04]
    [-5.51835328e+04 -5.51835328e+04 -5.51835328e+04 -5.51835328e+04
     -5.51835328e+04]
    [-5.56021523e+04 -5.56021523e+04 -5.56021523e+04 -5.56021523e+04
     -5.56021523e+04]
    ...
    [ 3.51100249e+02  3.51100249e+02  3.51100249e+02  3.51100249e+02
      3.51100249e+02]
    [-3.51100249e+02 -3.51100249e+02 -3.51100249e+02 -3.51100249e+02
     -3.51100249e+02]
    [ 4.11841225e+02  4.11841225e+02  4.11841225e+02  4.11841225e+02
      4.11841225e+02]]
  
   [[-5.56831755e+04 -5.56831755e+04 -5.56831755e+04 -5.56831755e+04
     -5.56831755e+04]
    [-5.53455791e+04 -5.53455791e+04 -5.53455791e+04 -5.53455791e+04
     -5.53455791e+04]
    [-5.51160135e+04 -5.51160135e+04 -5.51160135e+04 -5.51160135e+04
     -5.51160135e+04]
    ...
    [-5.53455791e+04 -5.53455791e+04 -5.53455791e+04 -5.53455791e+04
     -5.53455791e+04]
    [-5.52915636e+04 -5.52915636e+04 -5.52915636e+04 -5.52915636e+04
     -5.52915636e+04]
    [-5.51160135e+04 -5.51160135e+04 -5.51160135e+04 -5.51160135e+04
     -5.51160135e+04]]
  
   [[-5.53050675e+04 -5.53050675e+04 -5.53050675e+04 -5.53050675e+04
     -5.53050675e+04]
    [-5.55751446e+04 -5.55751446e+04 -5.55751446e+04 -5.55751446e+04
     -5.55751446e+04]
    [-5.55481369e+04 -5.55481369e+04 -5.55481369e+04 -5.55481369e+04
     -5.55481369e+04]
    ...
    [-5.53455791e+04 -5.53455791e+04 -5.53455791e+04 -5.53455791e+04
     -5.53455791e+04]
    [-5.53860906e+04 -5.53860906e+04 -5.53860906e+04 -5.53860906e+04
     -5.53860906e+04]
    [-5.53455791e+04 -5.53455791e+04 -5.53455791e+04 -5.53455791e+04
     -5.53455791e+04]]
  
   ...
  
   [[ 3.49570521e+07  3.49570521e+07  3.49570521e+07  3.49570521e+07
      3.49570521e+07]
    [ 4.86743668e+06  4.86743668e+06  4.86743668e+06  4.86743668e+06
      4.86743668e+06]
    [ 1.41598179e+07  1.41598179e+07  1.41598179e+07  1.41598179e+07
      1.41598179e+07]
    ...
    [-2.12397296e+07 -2.12397296e+07 -2.12397296e+07 -2.12397296e+07
     -2.12397296e+07]
    [-4.29219525e+07 -4.29219525e+07 -4.29219525e+07 -4.29219525e+07
     -4.29219525e+07]
    [ 5.35418146e+07  5.35418146e+07  5.35418146e+07  5.35418146e+07
      5.35418146e+07]]
  
   [[ 3.09746030e+07  3.09746030e+07  3.09746030e+07  3.09746030e+07
      3.09746030e+07]
    [ 4.64619051e+07  4.64619051e+07  4.64619051e+07  4.64619051e+07
      4.64619051e+07]
    [ 2.92046256e+07  2.92046256e+07  2.92046256e+07  2.92046256e+07
      2.92046256e+07]
    ...
    [ 3.93819956e+07  3.93819956e+07  3.93819956e+07  3.93819956e+07
      3.93819956e+07]
    [ 2.16822218e+07  2.16822218e+07  2.16822218e+07  2.16822218e+07
      2.16822218e+07]
    [ 3.31870747e+07  3.31870747e+07  3.31870747e+07  3.31870747e+07
      3.31870747e+07]]
  
   [[ 1.37173236e+07  1.37173236e+07  1.37173236e+07  1.37173236e+07
      1.37173236e+07]
    [ 1.23898405e+07  1.23898405e+07  1.23898405e+07  1.23898405e+07
      1.23898405e+07]
    [ 5.48692976e+07  5.48692976e+07  5.48692976e+07  5.48692976e+07
      5.48692976e+07]
    ...
    [ 4.60194107e+07  4.60194107e+07  4.60194107e+07  4.60194107e+07
      4.60194107e+07]
    [ 3.71695238e+07  3.71695238e+07  3.71695238e+07  3.71695238e+07
      3.71695238e+07]
    [ 4.73468937e+07  4.73468937e+07  4.73468937e+07  4.73468937e+07
      4.73468937e+07]]]
  '''
# ---
# name: test_slicer[simple2]
  '''
  [[[-267.23949016 -267.23949016 -267.23949016 -267.23949016 -267.23949016]
    [-267.99564425 -267.99564425 -267.99564425 -267.99564425 -267.99564425]
    [-268.16638872 -268.16638872 -268.16638872 -268.16638872 -268.16638872]
    ...
    [-286.72875199 -286.72875199 -286.72875199 -286.72875199 -286.72875199]
    [-285.7530693  -285.7530693  -285.7530693  -285.7530693  -285.7530693 ]
    [-285.21644382 -285.21644382 -285.21644382 -285.21644382 -285.21644382]]
  
   [[-267.38584256 -267.38584256 -267.38584256 -267.38584256 -267.38584256]
    [-267.84929184 -267.84929184 -267.84929184 -267.84929184 -267.84929184]
    [-267.94686011 -267.94686011 -267.94686011 -267.94686011 -267.94686011]
    ...
    [-287.89957123 -287.89957123 -287.89957123 -287.89957123 -287.89957123]
    [-288.04592363 -288.04592363 -288.04592363 -288.04592363 -288.04592363]
    [-287.82639503 -287.82639503 -287.82639503 -287.82639503 -287.82639503]]
  
   [[-267.53219497 -267.53219497 -267.53219497 -267.53219497 -267.53219497]
    [-267.72733151 -267.72733151 -267.72733151 -267.72733151 -267.72733151]
    [-267.92246805 -267.92246805 -267.92246805 -267.92246805 -267.92246805]
    ...
    [-288.19227604 -288.19227604 -288.19227604 -288.19227604 -288.19227604]
    [-287.77761089 -287.77761089 -287.77761089 -287.77761089 -287.77761089]
    [-287.28976954 -287.28976954 -287.28976954 -287.28976954 -287.28976954]]
  
   ...
  
   [[-172.96414976 -172.96414976 -172.96414976 -172.96414976 -172.96414976]
    [-172.30556394 -172.30556394 -172.30556394 -172.30556394 -172.30556394]
    [-171.45184158 -171.45184158 -171.45184158 -171.45184158 -171.45184158]
    ...
    [-191.96557024 -191.96557024 -191.96557024 -191.96557024 -191.96557024]
    [-191.8436099  -191.8436099  -191.8436099  -191.8436099  -191.8436099 ]
    [-191.94117817 -191.94117817 -191.94117817 -191.94117817 -191.94117817]]
  
   [[-173.11050216 -173.11050216 -173.11050216 -173.11050216 -173.11050216]
    [-172.45191634 -172.45191634 -172.45191634 -172.45191634 -172.45191634]
    [-171.81772259 -171.81772259 -171.81772259 -171.81772259 -171.81772259]
    ...
    [-191.57529716 -191.57529716 -191.57529716 -191.57529716 -191.57529716]
    [-191.79482577 -191.79482577 -191.79482577 -191.79482577 -191.79482577]
    [-191.52651303 -191.52651303 -191.52651303 -191.52651303 -191.52651303]]
  
   [[-172.62266081 -172.62266081 -172.62266081 -172.62266081 -172.62266081]
    [-171.93968293 -171.93968293 -171.93968293 -171.93968293 -171.93968293]
    [-171.30548917 -171.30548917 -171.30548917 -171.30548917 -171.30548917]
    ...
    [-191.08745582 -191.08745582 -191.08745582 -191.08745582 -191.08745582]
    [-191.30698442 -191.30698442 -191.30698442 -191.30698442 -191.30698442]
    [-191.57529716 -191.57529716 -191.57529716 -191.57529716 -191.57529716]]]
  '''
# ---
# name: test_slicer[simple]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [5 5 5 5 5]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
